--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -39,6 +39,9 @@
   gap: calc(var(--sbb-spacing-fixed-5x) * 2);
   height: var(--sbb-header-height-override, var(--sbb-header-height));
   width: 100%;
+  @include mq($to: medium) {
+    gap: var(--sbb-spacing-responsive-s);
+  }
 }
 
 .sbb-header__logo {
@@ -51,10 +54,20 @@
 }
 
 ::slotted(sbb-header-action:first-child) {
+  // if breakpoint > large, all elements (except menu) align to the right
   @include mq($from: large) {
     margin-right: auto;
   }
+
+  // if breakpoint = small, menu label is still visible while other labels are hidden
   @include mq($from: small, $to: medium) {
     --sbb-header-action-visibility-override: block;
+  }
+}
+
+::slotted(sbb-header-action:last-child) {
+  // if breakpoint < medium, language header action is hidden
+  @include mq($to: medium) {
+    display: none;
   }
 }
